--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "tailwindcss"
   ],
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist",
-    "watch": "tailwindcss -i ./input.css -o ./dist/output.css --watch"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --dist-dir ./dist"
   },
   "license": "MIT",
   "devDependencies": {
